# voxel

./: .gitignore  CMakeLists.txt
include/: filesUtil.h  glfw_code.h  shadersUtil.h
include/glad/: glad.h
src/: glad.c  main.c  shadersUtil.c
src/shaders/: fragment.vs  vertex.vs
